Issue 266: align labels to left for small viewports

--- a/webcompat/static/css/development/components/issue-item.css
+++ b/webcompat/static/css/development/components/issue-item.css
@@ -68,6 +68,6 @@
       margin-top:1em;
     }
     .IssueItem-label {
-      text-align:center;
+      text-align:left;
     }
   }
